# causal-bio-lab

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: INDUSTRY_LANDSCAPE.md  README.md
docs/causal_inference/: backdoor_paths.md  backdoor_paths_v2.md  confounding-examples.md  do-calculus-enhanced.md  do-calculus-original.md  do-calculus.md  estimating-treatment-effects.md  identifying-confounders.md  observation-vs-intervention.md  propensity-scores-and-ipw.md  structural-causal-models.md
docs/discovery/: limits_of_discovery.md
examples/: 01_treatment_effect_estimation.py
examples/confounding/: 02_background.md  02_confounding_simulations.py
examples/scm/: 01_scm_basics.py  02_scm_and_do_calculus.py
notebooks/ab_testing/: 01_ab_testing_fundamentals.ipynb  02_multi_group_comparisons.ipynb
notebooks/causal_inference/: 02_causal_graphs.ipynb  03_sensitivity_analysis.ipynb  04_structural_causal_models.ipynb  05_neural_cate_benchmark.ipynb
notebooks/causal_inference/01_treatment_effects/: 01_treatment_effects.ipynb  meta_learners_tutorial.md  (+1 more)
notebooks/probability/: 01_beta_binomial_conjugacy.md  01_beta_distribution.ipynb  02_gamma_distribution.ipynb  02_gamma_exponential_relationship.md  02_gamma_poisson_conjugacy.md  03_negative_binomial.ipynb  04_dirichlet_distribution.ipynb  05_dirichlet_process.ipynb  06_dp_mixture_models.ipynb
scripts/: README_MERMAID.md  md_to_pdf.py  preprocess_mermaid.py  regenerate_pdfs_with_mermaid.sh
scripts/docs/: MERMAID_SETUP.md
src/causalbiolab/: __init__.py
tests/: __init__.py
(+28 files in other folders)
